# rust-mangler

./: .gitignore  CMakeLists.txt  README.md  a.rs  mangle.sh
src/: main.cc
